Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.6.6 (??/??/20??):
	libpurple:
	* Fix 'make check' on OS X. (David Fang)
	* Fix a quirk in purple_markup_html_to_xhtml that caused some messages
	  to be improperly converted to XHTML.

	General:
	* Correctly disable all missing dependencies when using the
	  --disable-missing-dependencies option.  (Gabriel Schulhof)

	Gadu-Gadu:
	* Fix display of avatars after a server-side change. (Krzysztof
	  Klinikowski)

	MSN:
	* File transfer requests will no longer cause a crash if you delete the
	  file before the other side accepts.
	* Received files will no longer hold an extra lock after completion,
	  meaning they can be moved or deleted without complaints from your OS.
	* Buddies who sign in from a second location will no longer cause an
	  unnecessary chat window to open.
	* Support setting an animated GIF as a buddy icon.

	XMPP:
	* Added support for the SCRAM-SHA-1 SASL mechanism.  This is only
	  available when built without Cyrus SASL support.
	* When getting info on a domain-only (server) JID, show uptime
	  (when given by the result of the "last query") and don't show status as
	  offline.
	* Wrap XHTML messages in <p>, as described in XEP-0071, for compatibility
	  with some clients.
	* Don't do an SRV lookup for a STUN server associated with the account
	  if one is already set globally in prefs.
	* Don't send custom smileys larger than the recommended maximum object size
	  specified in the BoB XEP. Will prevent getting disconnected because of
	  sending to large stanzas.

	Yahoo:
	* Don't send <span> and </span> tags.  (Fartash Faghri)

	Pidgin:
	* Correctly size conversation and status box entries when the
	  interior-focus style property is diabled. (Gabriel Schulhof)
	* Correctly handle a multiline text field being required in a
	  request form.  (Thanks to Florian Zeitz for finding this problem)
	* Search friends by email-addresses in the buddy list. (Luoh Ren-Shan)
